# Change Log
All notable changes to this project will be documented in this file.
The format is based on [Keep a Changelog](http://keepachangelog.com/) 
and this project adheres to [Semantic Versioning](http://semver.org/).

## [0.2.3] mar 4 2017
#### added
use more server instances decrease the consumer time.
#### thoughts:
use the same pattern as yuankun, mix producer and consumer together.
## [0.2.2] May 2 2017
#### added 
- dimes added
- job file of dimes added

## [0.2.1] May 1 2017
#### changed
#### working version
	no gdim_define in code
	with 2 dimensions in jobfile
	seems reading takes sometime


## [0.2.0] April 28 2017
#### moved back to bridges
#### changes
#### note
	all timer in a job should be average

## [0.1.21] April 25 2017
#### Qestion:
	how to deal with different nlines in various processes?
	erase the warning flags?
	PMI error comes from number of arguments!
	-g option ?
	mpirun_rsh problem?(apply to ds_exmaple, see what happens)
		~/ds_examples/ex1_putget correct executed for 1:1
#### changes
	malloc-free in in the loop of raw_dspaces_read
	consumer need to know how many procs in producer
#### issues
	raw dspaces has rpc_connect error:9036590/results/consumer.log
#### trials
	run ds_examples/: works
	add -g flag, see output(need to roll back), same problem
	1:1 mpiio works, but very slow 5s per step writing time
	in bridges, writting time for 1:1 is much smaller:less .3s
	/pylon5/cc4s86p/fli5/data_broker_adios/1019183/results/producer.log
#### this PMI error happened before (Mar 30), then project was immigrated to
bridges

## [0.1.20] April 24 2017
#### changed
- project moved to comet
- flexpath configured
- in ADIOS removed the -g option, rebuilt
- do I need remove -g option in all libraries?
#### problems
- in comet, dataspaces nokeep has PMI error, 9024518
- in bridges, dspaces only one step, 103192, new: 1032015: move back to
'5bf287a81', try again
#### added
- raw dspaces added

