@@ -5,9 +5,15 @@ and this project adheres to [Semantic Versioning](http://semver.org/).
 
 ## [0.2.3] mar 4 2017
 #### added
-use more server instances decrease the consumer time.
+- use more server instances decrease the consumer time.
+- add timer in mpiio version
+#### changed
+- dspaces max version is limited to 20
+- ds_adaptor changed correspondingly
 #### thoughts:
-use the same pattern as yuankun, mix producer and consumer together.
+- too many versions take too much memory, instead limit max version to smaller
+number , and use mod of version number as lock name
+
 ## [0.2.2] May 2 2017
 #### added 
 - dimes added
